<resources>
    <string name="app_name">Moja Spiżarka</string>
    <string name="product_name">Produkt</string>
    <string name="product_unit">Jednostka</string>
    <string name="product_quantity">Ilość</string>
    <string name="edit">Edytuj</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="delete">x</string>
    <string name="move">=></string>
    <string name="listChange">Zmiana wyświetlanej listy</string>
    <string name="listName">Lista zapasów</string>
    <string name="listName2">Lista zakupów</string>
</resources>
