<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/add"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3">

        <EditText
            android:id="@+id/name"
            android:inputType="text"
            android:hint="@string/product_name"
            android:textColor="@color/listText"
            android:textSize="@dimen/text_medium"
            android:padding="@dimen/row_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:onClick="onCopy"/>

        <EditText
            android:id="@+id/quantity"
            android:inputType="numberDecimal"
            android:hint="@string/product_quantity"
            android:textColor="@color/listText"
            android:textSize="@dimen/text_medium"
            android:padding="@dimen/row_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"/>

        <EditText
            android:id="@+id/unit"
            android:inputType="text"
            android:hint="@string/product_unit"
            android:textColor="@color/listText"
            android:textSize="@dimen/text_medium"
            android:padding="@dimen/row_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"/>

    </LinearLayout>

    <ListView
        android:id="@+id/list"
        android:layout_below="@+id/buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:focusable="true" />

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_below="@id/add"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4">

        <Button
            android:id="@+id/deleteButton"
            android:text="@string/delete"
            android:textSize="@dimen/text_medium"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="onDelete"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/addButton"
            android:text="@string/add"
            android:textSize="@dimen/text_medium"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="onAdd"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/subtractButton"
            android:text="@string/subtract"
            android:textSize="@dimen/text_medium"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="onSubtract"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/moveButton"
            android:text="@string/move"
            android:textSize="@dimen/text_medium"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="onMove"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/shopping_image"
        android:layout_height="@dimen/shopping_image"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/shopping"
        android:layout_margin="@dimen/text_medium"
        android:contentDescription="@string/buy"
        android:onClick="onBuyList"/>

</RelativeLayout>